--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
 
-<p>Where: Coming soon!</p>
+<p>Where: Brigade</p>
 
-<p>When: Later this year!</p>
+<p>When: December 5th</p>
 
 <p>Who: You! And other fantastic technical women.</p>
 
