Add details on location and time
* Corrected date.
* Added start and end times.
* Added street address and intersections to location.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
 
-<p>Where: Brigade</p>
+<p>Where: Brigade (548 4th Street, San Francisco, CA 94107; 4th between Brannan and Bryant)</p>
 
-<p>When: December 5th</p>
+<p>When: December 4, 2014, 6:30-9:30</p>
 
 <p>Who: You! And other fantastic technical women.</p>
 
