update location, contact info

--- a/index.html
+++ b/index.html
@@ -34,23 +34,30 @@
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
 
-<p>Where: Brigade (548 4th Street, San Francisco, CA 94107; 4th between Brannan and Bryant)</p>
+<p>Where: Yelp (<a name="140 New Montgomery St, San Francisco" href="http://goo.gl/maps/7Ue86"/>)</p>
 
 <p>When: December 4, 2014, 6:30-9:30</p>
 
 <p>Who: You! And other fantastic technical women.</p>
 
-<p>What: 5-6 minute talks on anything relating to the tech industry </p>
+<p>What: 5-6 minute talks on anything relating to the tech industry or coding in general</p>
 
 <ul>
 <li>the sweet hack you put together to solve a problem</li>
 <li>what you wished you knew at the beginning/middle/yesterday of your career</li>
 <li>an awesome new tool or language you've been using</li>
 <li>reflections on state of the tech industry</li>
+<li>how you use programming outside of the tech industry</li>
 </ul><h2>
 <a name="being-a-speaker" class="anchor" href="#being-a-speaker"><span class="octicon octicon-link"></span></a>Being a Speaker</h2>
 
-<p>Form link coming soon</p>
+  <p>Fill out our form <a name="HERE" href="https://docs.google.com/forms/d/1bPkv44yzNQhVvwWis_7Jt3hNEIxPLrxIED81vWhL1qg/viewform?usp=send_form"/> to sign up to speak!
+    We'll get back to you about a slot!
+  </p>
+
+<a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions?</h2>
+  <p>Contact the organizers: and.georgia.m at the gmails, emilyjleathers at the gmails</p>
+
         </section>
 
         <footer>
