--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
 
-<p>Where: Yelp (<a name="140 New Montgomery St, San Francisco" href="http://goo.gl/maps/7Ue86"/>)</p>
+<p>Where: Yelp (<a href="http://goo.gl/maps/7Ue86">140 New Montgomery St, San Francisco</a>)</p>
 
 <p>When: December 4, 2014, 6:30-9:30</p>
 
@@ -51,7 +51,7 @@
 </ul><h2>
 <a name="being-a-speaker" class="anchor" href="#being-a-speaker"><span class="octicon octicon-link"></span></a>Being a Speaker</h2>
 
-  <p>Fill out our form <a name="HERE" href="https://docs.google.com/forms/d/1bPkv44yzNQhVvwWis_7Jt3hNEIxPLrxIED81vWhL1qg/viewform?usp=send_form"/> to sign up to speak!
+  <p>Fill out our form <a href="https://docs.google.com/forms/d/1bPkv44yzNQhVvwWis_7Jt3hNEIxPLrxIED81vWhL1qg/viewform?usp=send_form">HERE</a> to sign up to speak!
     We'll get back to you about a slot!
   </p>
 
