--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </p>
 
 <a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions?</h2>
-  <p>Contact the organizers: and.georgia.m at the gmails, emilyjleathers at the gmails</p>
+  <p>Contact the organizers @ gmail: and.georgia.m, emilyjleathers</p>
 
         </section>
 
