--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
         <header>
           <h1>WWCodeLightningTalks</h1>
-          <h2></h2>
         </header>
 
-        <hr>
+        <hr style="margin-top:0px;">
 
         <section id="main_content">
           <h3>
@@ -60,7 +59,7 @@
 
         </section>
 
-        <footer>
+        <footer style="margin-top:0;">
           Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
         </footer>
 
