add queer & trans friendly, code of conduct link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a name="hello" class="anchor" href="#hello"><span class="octicon octicon-link"></span></a>Hello!</h3>
 
 <h1>
-<a name="interested-in-attending-or-speaking-at-women-who-codes-lightning-talks" class="anchor" href="#interested-in-attending-or-speaking-at-women-who-codes-lightning-talks"><span class="octicon octicon-link"></span></a>Interested in attending or speaking at Women Who Code's Lightning Talks?</h1>
+<a name="interested-in-attending-or-speaking" class="anchor" href="#interested-in-attending-or-speaking-at-women-who-codes-lightning-talks"><span class="octicon octicon-link"></span></a>Interested in attending or speaking at Women Who Code's Lightning Talks?</h1>
 
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
@@ -56,6 +56,7 @@
 
 <a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions?</h2>
   <p>Contact the organizers @ gmail: and.georgia.m, emilyjleathers</p>
+  <p>This event is explicitly queer and trans friendly, and is governed by our <a href="https://github.com/WomenWhoCode/guidelines-resources/blob/master/code_of_conduct.md">Code of Conduct</a></p>
 
         </section>
 
