add eventbrite link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
 
+<p><a href="http://www.eventbrite.com/e/women-who-code-lightning-talks-tickets-13975183149">RSVP HERE!</a> Yelp requires an RSVP for admission.</p>
+
 <p>Where: Yelp (<a href="http://goo.gl/maps/7Ue86">140 New Montgomery St, San Francisco</a>)</p>
 
 <p>When: December 4, 2014, 6:30-9:30</p>
