--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 </ul><h2>
 <a name="being-a-speaker" class="anchor" href="#being-a-speaker"><span class="octicon octicon-link"></span></a>Being a Speaker</h2>
 
-  <p>Fill out our form <a href="https://docs.google.com/forms/d/1bPkv44yzNQhVvwWis_7Jt3hNEIxPLrxIED81vWhL1qg/viewform?usp=send_form">HERE</a> to sign up to speak!
-    We'll get back to you about a slot! Submissions will be closing at noon (12pm PST) on Sunday, 11/16.
+  <p>Talk submissions closed at noon (12pm PST) on Sunday, 11/16. Check back Wednesday for a list of topics!
   </p>
 
 <a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions?</h2>
