--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a name="hello" class="anchor" href="#hello"><span class="octicon octicon-link"></span></a>Hello!</h3>
 
 <h1>
-<a name="interested-in-attending-or-speaking" class="anchor" href="#interested-in-attending-or-speaking-at-women-who-codes-lightning-talks"><span class="octicon octicon-link"></span></a>Interested in attending or speaking at Women Who Code's Lightning Talks?</h1>
+<a name="interested-in-attending" class="anchor" href="#interested-in-attending-women-who-codes-lightning-talks"><span class="octicon octicon-link"></span></a>Interested in attending Women Who Code's Lightning Talks?</h1>
 
 <h2>
 <a name="deets" class="anchor" href="#deets"><span class="octicon octicon-link"></span></a>Deets</h2>
@@ -43,17 +43,28 @@
 
 <p>What: 5-6 minute talks on anything relating to the tech industry or coding in general</p>
 
-<ul>
-<li>the sweet hack you put together to solve a problem</li>
-<li>what you wished you knew at the beginning/middle/yesterday of your career</li>
-<li>an awesome new tool or language you've been using</li>
-<li>reflections on state of the tech industry</li>
-<li>how you use programming outside of the tech industry</li>
-</ul><h2>
-<a name="being-a-speaker" class="anchor" href="#being-a-speaker"><span class="octicon octicon-link"></span></a>Being a Speaker</h2>
+<h2>
+<a name="talks" class="anchor" href="#talks"><span class="octicon octicon-link"></span></a>Talks</h2>
 
-  <p>Talk submissions closed at noon (12pm PST) on Sunday, 11/16. Check back Wednesday for a list of topics!
-  </p>
+  <p>These are gonna be great:</p>
+  <ul>
+    <li><em>Visualizing Code</em> by Anne Spaulding</li>
+    <li><em>Diving In: Working with a Large Codebase</em> by Daphne Larose</li>
+    <li><em>Programmer's Hands</em> by Linh Bui</li>
+    <li><em>Tech in Politics</em> by Tiffany Washburn</li>
+    <li><em>Responsive Design</em> by Gabriela Zamudio</li>
+    <li><em>5 Neat ES6 Features</em> by Flarnie Marchan</li>
+    <li><em>Atomic CSS: How to Take Control of Your CSS</em> by Amelia Downs</li>
+    <li><em>Tackling Mental Health in STEM Education</em> by Julia Nguyen</li>
+    <li><em>How to Hire a Developer</em> by Anca Mosoiu</li>
+    <li><em>Things You Should Know When Talking to APIs</em> by Sowjanya Muduri</li>
+    <li><em>Crucial Conversations in Your Career</em> by Susanne Lehmann, Wei Wu, Jen Wang, and Hye In Kim</li>
+    <li><em>Developer Bootcamps and Changing to a Tech Career</em> by Brittany Martin</li>
+    <li><em>Why Artists and Designers Should Learn to Program Too</em> by Aradhana Vaidya</li>
+    <li><em>Bradley Cooper Might Not Care About Hash Functions, but Here's Why He Should</em> by Sonya Berg</li>
+  </ul>
+  
+  <p>If you missed the chance to apply to speak at this event, stay tuned for the next one! Or, contact Georgia to see if there's a WWC study group that's looking for guest speakers.</p>
 
 <a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions?</h2>
   <p>Contact the organizers @ gmail: and.georgia.m, emilyjleathers</p>
